--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Sudoku</h1>
         <hr>
         
-        <h2 id="errors">0</h2>
+        <h2><small>ERRORS: </small><b id="errors">0</b></h2>
 
         <!-- 9x9 board -->
         <div id="board"></div>
